initial commit and add activity test case

--- a/configuration.properties
+++ b/configuration.properties
@@ -9,3 +9,5 @@ addActivityFile   = src/test/java/utilities/jsonfiles/addActivity.json
 putActivityFile =  src/test/java/utilities/jsonfiles/putActivity.json
 
 postAuthorsFile =  src/test/java/utilities/jsonfiles/postAuthors.json
+
+putAuthorsFile = src/test/java/utilities/jsonfiles/putAuthors.json
