--- a/configuration.properties
+++ b/configuration.properties
@@ -11,3 +11,9 @@ putActivityFile =  src/test/java/utilities/jsonfiles/putActivity.json
 postAuthorsFile =  src/test/java/utilities/jsonfiles/postAuthors.json
 
 putAuthorsFile = src/test/java/utilities/jsonfiles/putAuthors.json
+
+postBooksFile = src/test/java/utilities/jsonfiles/postBooks.json
+
+putBooksFile = src/test/java/utilities/jsonfiles/putBooks.json
+
+
